--- a/react-exceljs-sample-v1/package.json
+++ b/react-exceljs-sample-v1/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "exceljs": "^4.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
