--- a/react-exceljs-sample-v1/package.json
+++ b/react-exceljs-sample-v1/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.27.2",
     "exceljs": "^4.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
