--- a/react-exceljs-sample-v1/package.json
+++ b/react-exceljs-sample-v1/package.json
@@ -8,11 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "xlsx": "^0.18.5"
+    "stream-browserify": "^3.0.0",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
